kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drew-robert-api-deployment
  labels:
    app: drew-robert-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drew-robert-api
  template:
    metadata:
      labels:
        app: drew-robert-api
    spec:
      containers:
        - name: drew-robert-api
          image: drob1260/drew-robert-api:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret-files
              readOnly: true
              mountPath: "/secret-files"
      volumes:
        - name: secret-files
          secret:
            secretName: drew-robert-api-secret
            items:
              - key: GoogleApiCredentials.json
                path: "GoogleApiCredentials.json"
                mode: 0400
