kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: drew-robert-api-service
  namespace: drew-robert-namespace
spec:
  type: ClusterIP
  ports:
    - name: dr-api-port
      port: 2601
      protocol: TCP
      targetPort: 8080
  selector:
    app: drew-robert-api
